add new website from server na

--- a/xem-phim-bo/wistoria-truong-va-kiem/index.html
+++ b/xem-phim-bo/wistoria-truong-va-kiem/index.html
@@ -1190,7 +1190,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             8
+             9
             </dd>
             <br/>
            </dl>
@@ -1670,21 +1670,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tho-san-tien-thuong-tuoi-hoc-duong-phan-1" title="Thợ Săn Tiền Thưởng Tuổi Học Đường (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/ke-bi-khai-tru" title="Kẻ bị khai trừ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tho-san-tien-thuong-tuoi-hoc-duong-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-bi-khai-tru-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thợ Săn Tiền Thưởng Tuổi Học Đường (Phần 1)
+             Kẻ bị khai trừ
             </span>
             <span class="list-top-movie-item-en">
-             Teenage Bounty Hunters (Season 1)
+             The Bad Batch
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1692,18 +1692,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/quy-ba-durian" title="Quý Bà Durian">
+          <a class="list-top-movie-link" href="/phim-moi/vua-dau-bep-soma-phan-5" title="Vua đầu bếp Soma (Phần 5)">
            <span class="status">
-            FHD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quy-ba-durian-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vua-dau-bep-soma-phan-5-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Quý Bà Durian
+             Vua đầu bếp Soma (Phần 5)
             </span>
             <span class="list-top-movie-item-en">
-             Durian's Affair
+             Food Wars!: Shokugeki no Soma (The Fifth Plate)
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1714,21 +1714,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vet-tich-tren-nui-phan-2" title="Vết Tích Trên Núi (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/cam-do-ma-ca-rong" title="Cám Dỗ Ma Cà Rồng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vet-tich-tren-nui-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cam-do-ma-ca-rong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vết Tích Trên Núi (Phần 2)
+             Cám Dỗ Ma Cà Rồng
             </span>
             <span class="list-top-movie-item-en">
-             Signs (Season 2)
+             The Insatiable
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1736,21 +1736,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/canh-sat-phap" title="Cảnh Sát Pháp">
+          <a class="list-top-movie-link" href="/phim-moi/bien-nien-su-arthdal" title="Biên niên sử Arthdal">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/canh-sat-phap-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bien-nien-su-arthdal-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cảnh Sát Pháp
+             Biên niên sử Arthdal
             </span>
             <span class="list-top-movie-item-en">
-             Polisse
+             Arthdal Chronicles
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1758,21 +1758,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-quy-co-dau-vat-quyen-ru-phan-2" title="Những quý cô đấu vật quyến rũ (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/cheoje-thoi-tre-va-nhung-nguoi-ban" title="Cheoje Thời Trẻ Và Những Người Bạn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-quy-co-dau-vat-quyen-ru-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cheoje-thoi-tre-va-nhung-nguoi-ban-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những quý cô đấu vật quyến rũ (Phần 2)
+             Cheoje Thời Trẻ Và Những Người Bạn
             </span>
             <span class="list-top-movie-item-en">
-             GLOW (Season 2)
+             Young Cheoje And Friend
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
