add new website from server na

--- a/xem-phim-bo/nuoc-quyt-co-ga/index.html
+++ b/xem-phim-bo/nuoc-quyt-co-ga/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1720,18 +1720,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/how-to-have-sex" title="How to Have Sex">
+          <a class="list-top-movie-link" href="/phim-moi/toi-va-anti-fan-ket-hon" title="Tôi và anti-fan kết hôn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/how-to-have-sex-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-va-anti-fan-ket-hon-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             How to Have Sex
+             Tôi và anti-fan kết hôn
             </span>
             <span class="list-top-movie-item-en">
-             How to Have Sex
+             So, I Married My Anti-Fan
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1742,40 +1742,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ac-than" title="Ác thần">
+          <a class="list-top-movie-link" href="/phim-moi/sing-my-crush-truy-phong" title="Sing My Crush: Truy Phong">
            <span class="status">
-            HD Vietsub
+            FHD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ac-than-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sing-my-crush-truy-phong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ác thần
+             Sing My Crush: Truy Phong
             </span>
             <span class="list-top-movie-item-en">
-             Legion
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thi-truong-kingstown-phan-1" title="Thị Trưởng Kingstown (Phần 1)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thi-truong-kingstown-phan-1-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thị Trưởng Kingstown (Phần 1)
-            </span>
-            <span class="list-top-movie-item-en">
-             Mayor of Kingstown (Season 1)
+             Sing My Crush
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1786,18 +1764,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-doi-va-cai-chet-cua-marsha-p-johnson" title="Cuộc đời và cái chết của Marsha P. Johnson">
+          <a class="list-top-movie-link" href="/phim-moi/linh-hon-dao" title="Linh hồn dao">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-doi-va-cai-chet-cua-marsha-p-johnson-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/linh-hon-dao-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cuộc đời và cái chết của Marsha P. Johnson
+             Linh hồn dao
             </span>
             <span class="list-top-movie-item-en">
-             The Death and Life of Marsha P. Johnson
+             Soul Knife
             </span>
             <span class="list-top-movie-item-view">
              0 lượt xem
@@ -1808,21 +1786,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vu-bat-coc-bat-ngo" title="Vụ Bắt Cóc Bất Ngờ">
+          <a class="list-top-movie-link" href="/phim-moi/ban-thich-thu-tu-cua-minh-nhu-the-nao-phan-5" title="Bạn thích thư Tư của mình như thế nào? (Phần 5)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vu-bat-coc-bat-ngo-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-thich-thu-tu-cua-minh-nhu-the-nao-phan-5-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vụ Bắt Cóc Bất Ngờ
+             Bạn thích thư Tư của mình như thế nào? (Phần 5)
             </span>
             <span class="list-top-movie-item-en">
-             Ashanti
+             How do you like Wednesday? (Season 5)
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/a-war" title="A War">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/a-war-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             A War
+            </span>
+            <span class="list-top-movie-item-en">
+             A War
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
