add new website from server na

--- a/xem-phim-moi/anh-hung-ban-phim/index.html
+++ b/xem-phim-moi/anh-hung-ban-phim/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1761,18 +1761,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/da-chien-giang-ho" title="Dã Chiến Giang Hồ">
+          <a class="list-top-movie-link" href="/phim-moi/chien-tranh-giua-cac-vi-sao-obi-wan-kenobi" title="Chiến Tranh Giữa Các Vì Sao: Obi-Wan Kenobi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/da-chien-giang-ho-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/obi-wan-kenobi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Dã Chiến Giang Hồ
+             Chiến Tranh Giữa Các Vì Sao: Obi-Wan Kenobi
             </span>
             <span class="list-top-movie-item-en">
-             Born Wild
+             Obi-Wan Kenobi
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/my-nhan-mo-bach-thu" title="Mỹ Nhân Mộ Bạch Thủ">
+           <span class="status">
+            HD Vietsub + Thuyết minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/my-nhan-mo-bach-thu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Mỹ Nhân Mộ Bạch Thủ
+            </span>
+            <span class="list-top-movie-item-en">
+             Love a Lifetime
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1783,21 +1805,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/luong-sinh-lieu-doi-ta-co-the-ngung-dau-thuong" title="Lương Sinh, Liệu Đôi Ta Có Thể Ngừng Đau Thương?">
+          <a class="list-top-movie-link" href="/phim-moi/di-tim-dory" title="Đi Tìm Dory">
            <span class="status">
-            HD Vietsub + Thuyết minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/luong-sinh-lieu-doi-ta-co-the-ngung-dau-thuong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/di-tim-dory-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lương Sinh, Liệu Đôi Ta Có Thể Ngừng Đau Thương?
+             Đi Tìm Dory
             </span>
             <span class="list-top-movie-item-en">
-             All Out of Love
+             Finding Dory
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1805,21 +1827,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/goc-toi-trong-tim" title="Góc tối trong tim">
+          <a class="list-top-movie-link" href="/phim-moi/tien-den" title="Tiền Đen">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/goc-toi-trong-tim-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tien-den-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Góc tối trong tim
+             Tiền Đen
             </span>
             <span class="list-top-movie-item-en">
-             Chambers
+             Money
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1827,40 +1849,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/matt-rife-chon-loc-tu-nhien" title="Matt Rife: Chọn lọc tự nhiên">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-cau-chuyen-phia-tay-hong-kong" title="Những câu chuyện phía Tây Hồng Kông">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/matt-rife-chon-loc-tu-nhien-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-cau-chuyen-phia-tay-hong-kong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Matt Rife: Chọn lọc tự nhiên
+             Những câu chuyện phía Tây Hồng Kông
             </span>
             <span class="list-top-movie-item-en">
-             Matt Rife: Natural Selection
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/joyride" title="Joyride">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/joyride-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Joyride
-            </span>
-            <span class="list-top-movie-item-en">
-             Joyride
+             Hong Kong West Side Stories
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
